# ruzaani-website

./: .gitignore  .gitmodules  AGENTS.md  Config.hs  Language.hs  Locales.hs  Main.hs  Paths.hs  README.md  Router.hs  Routes.hs  Types.hs  cabal.project  lurk.example.yaml  lurk.yaml  ruzaani-website.cabal  website.cabal
.github/workflows/: deploy.yml
Application/: Main.hs
Config/: Routes.hs
Controller/: Form.hs  Forms.hs  Static.hs
Locale/: Access.hs  Agency.hs  Common.hs  Error.hs  Home.hs  Legal.hs  Partial.hs  Prelude.hs  Pricing.hs  Product.hs  Thanks.hs
Locale/Email/: AccessThanks.hs  EnterpriseThanks.hs
Locale/Legal/: Prelude.hs  Privacy.hs  Terms.hs
Locale/Partial/: Animations.hs  Mockups.hs
Locales/: Access.hs  Agency.hs  Common.hs  Error.hs  Home.hs  Legal.hs  Prelude.hs  Pricing.hs  Product.hs  Thanks.hs
Locales/Components/: Animations.hs  Mockups.hs
Locales/Legal/: Prelude.hs  Privacy.hs  Terms.hs
Types/: Language.hs  LegalDoc.hs
View/: Access.hs  Agency.hs  Components.hs  Error.hs  Home.hs  Legal.hs  Partial.hs  Prelude.hs  Pricing.hs  Product.hs  Thanks.hs
View/Components/: Animations.hs  Mockups.hs
View/Email/: AccessNotice.hs  AccessThanks.hs  EnterpriseNotice.hs  EnterpriseThanks.hs
View/Layout/: Default.hs
View/Layouts/: Default.hs
View/Partial/: Animations.hs  Mockups.hs
public/: llms.txt  robots.txt  sitemap.xml
public/css/: agency-program.css  blog.css  coming-soon.css  common.css  error.css  home-animations.css  home.css  interactive-form.css  legal.css  mockups.css  pricing.css  product.css  style.css
public/js/: access.js  agency-program.js  common.js  home.js  interactive-form.js  pricing.js  product.js
