cabal-version:   3.6

name:            ruzaani-website
version:         2026.6.21
-- synopsis:     -- Short (one-line) description
-- description:  -- Long description

license:         NONE
-- copyright:    -- Copyright notice

author:          Fernando Romay
maintainer:      fernando.romay@ruzaani.com

build-type:      Simple

common warnings
    ghc-options: -Wall

common extensions
    default-language:   GHC2021
    default-extensions: OverloadedStrings
                        OverloadedRecordDot
                        DeriveDataTypeable
                        DeriveGeneric
                        QuasiQuotes
                        TemplateHaskell
                        DuplicateRecordFields
                        ImplicitParams
                        DataKinds
                        TypeApplications
                        ExtendedDefaultRules

-- ------------------------------------------------------------

executable ruzaani-website
    import:          warnings, extensions
    main-is:         Main.hs
    hs-source-dirs:  .
    ghc-options:     -Wno-missing-home-modules -Wno-dodgy-exports -threaded -rtsopts -with-rtsopts=-N
    other-modules:
                     Controller.Form,
                     Controller.Static,
                     Language,
                     Locale.Access,
                     Locale.Agency,
                     Locale.Partial,
                     Locale.Email.AccessThanks,
                     Locale.Email.EnterpriseThanks,
                     Locale.Home,
                     Locale.Legal,
                     Locale.Legal.Prelude,
                     Locale.Legal.Privacy,
                     Locale.Legal.Terms,
                     Locale.Partial.Animations,
                     Locale.Partial.Mockups,
                     Locale.Prelude,
                     Locale.Pricing,
                     Locale.Product,
                     Locale.Thanks,
                     Paths,
                     Router,
                     View.Access,
                     View.Agency,
                     View.Email.AccessNotice,
                     View.Email.AccessThanks,
                     View.Email.EnterpriseNotice,
                     View.Email.EnterpriseThanks,
                     View.Error,
                     View.Home,
                     View.Layout.Default,
                     View.Legal,
                     View.Partial,
                     View.Partial.Animations,
                     View.Partial.Mockups,
                     View.Prelude,
                     View.Pricing,
                     View.Product,
                     View.Thanks
    build-depends:   base ^>=4.17.2.1,
                     lurk,
                     scotty,
                     text,
                     wai,
                     warp,
                     containers,
                     aeson,
                     mtl,
                     http-types,
                     bytestring,
                     megaparsec,
                     template-haskell,
                     directory,
                     process,
                     time,
                     network,
                     connection
