cabal-version:   3.6

name:            ruzaani-website
version:         2026.6.12
-- synopsis:     -- Short (one-line) description
-- description:  -- Long description

license:         NONE
-- copyright:    -- Copyright notice

author:          Fernando Romay
maintainer:      fernando.romay@ruzaani.com

build-type:      Simple

-- extra-doc-files:    -- Extra files such as a CHANGELOG or a README

-- extra-source-files: -- Extras such as examples, or tutorial modules

common warnings
    ghc-options: -Wall

common extensions
    default-language:   GHC2021
    default-extensions: OverloadedStrings
                        DeriveDataTypeable
                        DeriveGeneric
                        QuasiQuotes
                        TemplateHaskell
                        DuplicateRecordFields
                        ImplicitParams
                        DataKinds
                        TypeApplications
                        ExtendedDefaultRules

-- ============================================================
-- Application Executable (this project)
-- ============================================================

executable ruzaani-website
    import:          warnings, extensions
    main-is:         Main.hs
    hs-source-dirs:  .
    ghc-options:     -Wno-missing-home-modules -Wno-dodgy-exports -threaded -rtsopts -with-rtsopts=-N
    other-modules:
                     Config,
                     Controller.Static,
                     Language,
                     Locales.Agency,
                     Locales.Common,
                     Locales.Components.Animations,
                     Locales.Components.Mockups,
                     Locales.Error,
                     Locales.Home,
                     Locales.Legal,
                     Locales.Legal.Prelude,
                     Locales.Legal.Privacy,
                     Locales.Legal.Terms,
                     Locales.Prelude,
                     Locales.Pricing,
                     Locales.Product,
                     Paths,
                     Router,
                     View.Agency,
                     View.Components,
                     View.Components.Animations,
                     View.Components.Mockups,
                     View.Error,
                     View.Home,
                     View.Layouts.Default,
                     View.Legal,
                     View.Prelude,
                     View.Pricing,
                     View.Product
    build-depends:   base ^>=4.17.2.1,
                     lurk,
                     scotty,
                     text,
                     wai,
                     warp,
                     containers,
                     aeson,
                     mtl,
                     http-types,
                     bytestring,
                     megaparsec,
                     template-haskell
